--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,11 @@
     </li>
   }
   </ul>
-  <app-tasks [name]="selectedUser?.name"/>
+
+  @if (selectedUser) {
+  <app-tasks [name]="selectedUser.name"/>
   <!-- <app-tasks [name]="selectedUser? selectedUser.name : '' "/> -->
+  } @else {
+    <p id="fallback">Select a user to see their tasks!</p>
+  }
 </main>
