--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,8 +1,8 @@
 
 <article>
-    <p>TASK TITLE</p>
-    <time>TIME</time>
-    <p>SUMMARY</p>
+    <p>{{task.title}}</p>
+    <time>{{task.dueDate}}</time>
+    <p>{{task.summary}}</p>
     <p class="actions">
         <button>Complete</button>
     </p>
