56. Content Projection with ng-content

--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,4 +1,4 @@
-
+<app-card>
 <article>
     <p>{{task.title}}</p>
     <time>{{task.dueDate}}</time>
@@ -7,3 +7,4 @@
         <button (click)="onCompleteTask()">Complete</button>
     </p>
 </article>
+</app-card>
