Changed title from paragraph to heading

--- a/src/app/tasks/task/task.component.html
+++ b/src/app/tasks/task/task.component.html
@@ -1,6 +1,6 @@
 <app-card>
 <article>
-    <p>{{task.title}}</p>
+    <h2>{{task.title}}</h2>
     <time>{{task.dueDate | date: 'fullDate'}}</time>
     <p>{{task.summary}}</p>
     <p class="actions">
